[package]
name = "leptos-fiber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.64"
leptos = { version = "0.4.5", features = ["csr"] }
thiserror = "1.0.44"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
