[package]
name = "leptos_three_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.5", features = ["csr"] }
wasm-bindgen = "0.2.87"
leptos_three = { version = "0.1.0", path = "../leptos_three"}
