[package]
name = "leptos_three"
version = "0.0.0"
edition = "2021"
description = "A Leptos library for Three.js"
license = "MIT"
repository = "https://github.com/richardanaya/leptos_three"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.5", features = ["csr"] }
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
